--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           enim, rem sequi unde sit doloribus distinctio culpa vitae. Iure dicta
           porro optio distinctio veniam ut velit ea aliquam libero, accusamus
           provident maiores ex blanditiis voluptates atque dolores dolorum fugit
-          consequuntur.
+          consequuntur majpr..
         </p>
 
         <abbr title="">
